# MediaPlayer

./: CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
include/: mediacontroller.h  singleinstanceserver.h  windowspowereventfilter.h
qml/: AboutDialog.qml  ContinuePlayingDialog.qml  ForwardOverlay.qml  FullscreenTransitionOverlay.qml  Main.qml  NFSlider.qml  NFToolButton.qml  PictureInPictureWindow.qml  PlaybackOverlay.qml  RewindOverlay.qml  SettingsDialog.qml  VerticalProgressBar.qml  VolumeIndicator.qml
qml/Singletons/: Common.qml  UserSettings.qml
resources/icons/: icons.qrc
src/: main.cpp  mediacontroller.cpp  singleinstanceserver.cpp  windowspowereventfilter.cpp
tools/: installer.iss
